# upload_client

./: .gitmodules  README.md  main.c  meson.build  meson_options.txt  yocto_cross.ini
example_upload/: example1.txt  example2.txt  large_text.txt
protos/: metadata.proto  uploadmetadata.proto
src/: main.c
src/include/protobuf/: uploadmetadata.pb-c.h
src/include/vmem/: vmem_dtp_server.h
